# UniSkill-Policy

./: .gitignore  .gitmodules  README.md  install_env.sh  pyproject.toml
configs/: uniskill_policy.json
robomimic/algo/: algo.py  diffusion_policy.py
robomimic/config/: base_config.py  diffusion_policy_config.py
robomimic/models/: obs_core.py  policy_nets.py
robomimic/scripts/: evaluate.py  evaluate.sh  list_libero_tasks.py  rollout.py  train.py
robomimic/utils/: dataset.py  lang_utils.py  train_utils.py
